// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment should give back error with no postId  1`] = `
<div>
  <form
    class="container row"
  >
    <label
      class="font-weight-bold col-12 d-none"
      for="comment"
    >
      Komment:
    </label>
    <div
      class="d-flex"
    >
      <input
        class="pr-3"
        id="comment"
        name="comment"
        placeholder="Hozzászólás írása..."
        type="text"
      />
      <img
        class="ml-3 "
        height="24"
        width="24"
      />
    </div>
  </form>
</div>
`;

exports[`Comment should give back error with no postId  2`] = `
<div
  uid=""
>
  <form
    class="container row"
  >
    <label
      class="font-weight-bold col-12 d-none"
      for="comment"
    >
      Komment:
    </label>
    <div
      class="d-flex"
    >
      <input
        class="pr-3"
        id="comment"
        name="comment"
        placeholder="Hozzászólás írása..."
        type="text"
      />
      <img
        class="ml-3 "
        height="24"
        width="24"
      />
    </div>
  </form>
</div>
`;
